tests/NormalTests/paczka1/small_fuzzy/27155374.err
Error in line 1: uBifGa S149 79,7
Error in line 6: S961 A950 29,9
Error in line 5: HEnegLv S185 5,2
Error in line 13: xPjuYU A950 8,3
